[gd_scene load_steps=12 format=3 uid="uid://lkts4onbrhr6"]

[ext_resource type="Script" path="res://Scripts/fruit_red.gd" id="1_4f3qt"]
[ext_resource type="Texture2D" uid="uid://dl87dcsvemywh" path="res://Assets/sprites/fruit.png" id="1_myttv"]
[ext_resource type="AudioStream" uid="uid://c0so5gc7ocgdt" path="res://Assets/sounds/power_up.wav" id="2_3d0i3"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i8ink"]
atlas = ExtResource("1_myttv")
region = Rect2(0, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7juco"]
atlas = ExtResource("1_myttv")
region = Rect2(32, 48, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7tf3k"]
atlas = ExtResource("1_myttv")
region = Rect2(16, 48, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_accrv"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i8ink")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7juco")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7tf3k")
}],
"loop": true,
"name": &"default",
"speed": 2.0
}]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_7xdow"]
radius = 2.0
height = 14.0

[sub_resource type="Animation" id="Animation_yilwd"]
resource_name = "PowerUpSound"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_2fa0q"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AudioStreamPlayer2D:playing")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jfexn"]
_data = {
"PowerUpSound": SubResource("Animation_yilwd"),
"RESET": SubResource("Animation_2fa0q")
}

[node name="FruitRed" type="Area2D"]
position = Vector2(-1, 0)
collision_mask = 2
script = ExtResource("1_4f3qt")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 4
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_accrv")
autoplay = "default"
frame = 1
frame_progress = 0.696386

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 4
position = Vector2(0, -7)
shape = SubResource("CapsuleShape2D_7xdow")

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_3d0i3")
max_distance = 7600.0
bus = &"soundEffects"

[node name="PowerUpRed" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jfexn")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
